--- a/branches/memcachedb-1.2.0/Makefile.in
+++ b/branches/memcachedb-1.2.0/Makefile.in
@@ -48,7 +48,7 @@ CONFIG_CLEAN_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
-am_memcachedb_OBJECTS = memcachedb.$(OBJEXT) ibuffer.$(OBJEXT) \
+am_memcachedb_OBJECTS = memcachedb.$(OBJEXT) item.$(OBJEXT) \
 	thread.$(OBJEXT) bdb.$(OBJEXT)
 memcachedb_OBJECTS = $(am_memcachedb_OBJECTS)
 memcachedb_LDADD = $(LDADD)
@@ -168,7 +168,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-memcachedb_SOURCES = memcachedb.c ibuffer.c memcachedb.h thread.c bdb.c
+memcachedb_SOURCES = memcachedb.c item.c memcachedb.h thread.c bdb.c
 SUBDIRS = doc tools
 EXTRA_DIST = doc tools CREDITS AUTHORS LICENSE
 all: config.h
@@ -260,7 +260,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bdb.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ibuffer.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/item.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/memcachedb.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/thread.Po@am__quote@
 
