stats and replication code improved

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = memcachedb
-memcachedb_SOURCES = memcachedb.c item.c memcachedb.h thread.c bdb.c
+memcachedb_SOURCES = memcachedb.c item.c memcachedb.h thread.c bdb.c stats.c
 
 SUBDIRS = doc tools
 EXTRA_DIST = doc tools CREDITS AUTHORS LICENSE
