--- a/Makefile.in
+++ b/Makefile.in
@@ -49,7 +49,7 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 am_memcachedb_OBJECTS = memcachedb.$(OBJEXT) item.$(OBJEXT) \
-	thread.$(OBJEXT) bdb.$(OBJEXT)
+	thread.$(OBJEXT) bdb.$(OBJEXT) stats.$(OBJEXT)
 memcachedb_OBJECTS = $(am_memcachedb_OBJECTS)
 memcachedb_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I.@am__isrc@
@@ -168,7 +168,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-memcachedb_SOURCES = memcachedb.c item.c memcachedb.h thread.c bdb.c
+memcachedb_SOURCES = memcachedb.c item.c memcachedb.h thread.c bdb.c stats.c
 SUBDIRS = doc tools
 EXTRA_DIST = doc tools CREDITS AUTHORS LICENSE
 all: config.h
@@ -262,6 +262,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bdb.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/item.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/memcachedb.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stats.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/thread.Po@am__quote@
 
 .c.o:
